# workspace

./: .gitignore  README.md  baxter.sh  frames.gv
src/: .rosinstall  .rosinstall.bak
src/apriltag_ros/apriltag_ros/config/: settings.yaml  tags.yaml
src/apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
src/baxter_examples/launch/: joint_trajectory_client.launch
src/baxter_examples/scripts/: ik_service_client.py
src/baxter_interface/src/joint_trajectory_action/: joint_trajectory_action.py
src/baxter_left_arm_ikfast_plugin/: CMakeLists.txt  baxter_left_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/baxter_left_arm_ikfast_plugin/src/: baxter_left_arm_ikfast_moveit_plugin.cpp  baxter_left_arm_ikfast_solver.cpp
src/baxter_right_arm_ikfast_plugin/: CMakeLists.txt  baxter_right_arm_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
src/baxter_right_arm_ikfast_plugin/src/: baxter_right_arm_ikfast_moveit_plugin.cpp  baxter_right_arm_ikfast_solver.cpp
src/baxter_shell/: CMakeLists.txt  package.xml
src/baxter_shell/launch/: shell_demo.launch
src/baxter_shell/scripts/: mv_integration_demo.py  mv_integration_service.py  shell_demo.py  transformation.py
src/baxter_shell/srv/: PickUp.srv
src/baxter_simulator/baxter_sim_examples/scripts/: ik_pick_and_place_demo.py
src/baxter_simulator/baxter_sim_kinematics/src/: arm_kinematics.cpp
src/baxter_tools/scripts/: tare.py
src/baxter_tools/src/baxter_tools/: smoketests.py
src/motion_commands/: CMakeLists.txt  package.xml
src/motion_commands/src/: motion_commands.py
src/motion_planning_services/: CMakeLists.txt  package.xml
src/motion_planning_services/launch/: motion_planning_services.launch  moveit_init.launch
src/motion_planning_services/scripts/: baxter_mover.py  hand_to_user_service.py  master_planner.py  pickup_service.py  put_in_bowl_service.py  service_test.py  stir_service.py
src/motion_planning_services/src/: BaxterState.cpp
src/motion_planning_services/srv/: PickUp.srv
src/objectDetection/: detect6D_RGBD.py  detect_rgbdCamera.py  segment6D_RGBD.py  trackWithSelection.py  trackWithYoloInitialization.py
src/speechrecog_ros/: CMakeLists.txt  package.xml
src/speechrecog_ros/msg/: DetectedObject.msg  SaladCommand.msg  SaladRecipe.msg
src/speechrecog_ros/scripts/: deviceindex.py  speech_recog.py  yolo_detect.py
