<?xml version="1.0"?>
<package format="2">
  <name>motion_planning_services</name>
  <version>1.0.0</version>
  <description>Baxter's MoveIt Package</description>

  <maintainer email="bhl2@rice.edu">Ben Leebron</maintainer>
  <author email="bhl2@rice.edu">Ben Leebron</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_gazebo</build_depend>
  <build_depend>baxter_interface</build_depend>
  <build_depend>baxter_tools</build_depend>
  <build_depend>object_detect</build_depend>
  <build_depend>baxter_shell</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  

  <exec_depend>rospy</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>baxter_core_msgs</exec_depend>
  <exec_depend>baxter_gazebo</exec_depend>
  <exec_depend>baxter_interface</exec_depend>
  <exec_depend>baxter_tools</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>object_detect</exec_depend>
  <exec_depend>baxter_shell</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <export>
  </export>
</package>